Add deployable service backend
